# poc2prod-production-deployment

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  api_server.py  app.py  docker-compose.yml  main.py  pytest.ini  requirements.txt
docs/: architecture.md  cicd-runbook.md  cost-controls.md  deployment-runbook.md  (+2 more)
mcp/: .env.example  .gitignore  Dockerfile  README.md  mcp_server.py  pyproject.toml  test_all_tools.py  test_client.py
mcp/rav_idp/: __init__.py  cli.py  config.py  inspection.py  io.py  models.py  pipeline.py  utils.py
mcp/rav_idp/components/: __init__.py  base.py  context_enricher.py  entity_router.py  fallback_extractor.py  image_enricher.py  layout_detector.py  page_renderer.py  preprocessor.py  quality_classifier.py  region_filter.py  region_preprocessor.py  region_quality_classifier.py
mcp/rav_idp/components/comparators/: __init__.py  image.py  table.py  text.py
mcp/rav_idp/components/extractors/: __init__.py  image.py  stage3a_tables.py  table.py  text.py
mcp/rav_idp/components/reconstructors/: __init__.py  image.py  table.py  text.py
mcp/rav_idp/data/: __init__.py  cli.py  downloader.py  registry.py
mcp/rav_idp/evaluation/: __init__.py  region_filter_eval.py  stage1_quality.py  stage2_layout.py  stage3a_tables.py  stage3b_images.py  stage3c_native_pdf.py  stage3c_text.py  stage4_fidelity.py  stage5_reextraction.py  stage6_endtoend.py
mcp/server/: __init__.py  app.py  config.py  deps.py
mcp/server/tools/: __init__.py  analysis.py  rav_idp.py  utility.py
mcp/tests/: test_mcp_tools.py
(+222 files in other folders)
