[project]
name = "mcp-tools-library-server"
version = "0.1.0"
description = "Standalone MCP tools hub for research assistant agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "e2b-code-interpreter>=1.0.0",
    "httpx>=0.27.0",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.0.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.5.0",
]

[project.optional-dependencies]
rav-idp = [
    "apted>=1.0",
    "docling>=2.0",
    "imagehash>=4.3",
    "Levenshtein>=0.25",
    "numpy>=1.26",
    "onnxruntime>=1.18",
    "openai>=1.30",
    "opencv-python-headless>=4.9",
    "pandas>=2.0",
    "pillow>=10.0",
    "pyarrow>=23.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "pyyaml>=6.0",
    "rapidocr>=3.4",
    "remotezip>=0.12",
    "scikit-image>=0.22",
    "scipy>=1.11",
    "timm>=1.0",
    "torch>=2.4",
    "torchvision>=0.19",
    "transformers>=4.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "rav_idp"]
